<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mamiya</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="promotion">今日特卖</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="title_activity_promotion">PromotionActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_mine">MineActivity</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="logo_text">DOGTREE</string>
    <string name="colon">\:</string>
    <string name="today_seckill">今日秒杀</string>
    <string name="dian_chang">点场</string>
    <string name="zhe">折</string>
    <string name="time_left_from_the_promotion">距离本场结束\:</string>
    <string name="chinese_currency_symbol">¥</string>
    <string name="brand_link_hint">查看品牌专场宝贝 ></string>
    <string name="seckill">立即秒杀</string>
    <string name="promotion_item_header_hint">今日特卖-超低价特卖进行中&#8230;</string>
    <string name="zhe_qi">折起</string>
    <string name="product_left_count">仅剩%d件</string>
    <string name="product_tab_params">产品参数</string>
    <string name="product_tab_details">图文详情</string>
    <string name="product_tab_reviews">商品评价</string>
    <string name="product_select_detail">选择  颜色分类  适用尺码</string>
    <string name="product_satisfaction">商品满意度</string>
    <string name="shop_info">商家信息：</string>
    <string name="brand">品牌：</string>
    <string name="product_number">货号：</string>
    <string name="for_ages">适用年龄：</string>
    <string name="product_place">产地：</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="category_milk">吸奶储奶</string>
    <string name="category_health">保健用品</string>
    <string name="category_pregnant">孕妇DHA</string>
    <string name="category_scar">祛疤淡纹</string>
    <string name="category_milk_bottle">奶瓶奶嘴</string>
    <string name="category_baby_health">婴幼保健</string>
    <string name="category_toy">婴幼玩具</string>
    <string name="category_holder">占位</string>
    <string name="category_more_brands">查看更多品牌>></string>
    <string name="mine_welcome">在DOGTREE购物，快乐就好！</string>
    <string name="not_paid">待付款</string>
    <string name="not_send">待发货</string>
    <string name="send">待收货</string>
    <string name="not_comment">待评价</string>
    <string name="post_sale">我的售后</string>
    <string name="orders">全部订单</string>
    <string name="addresses">地址管理</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="pick_product_details">请选择分类</string>
    <string name="product_size">尺码</string>
    <string name="color">颜色</string>
    <string name="buy_count">购买数量</string>
    
    <string name="sample_seckill_header_time">10:00</string>
    <string name="sample_seckill_item_title_1">Similac雅培亲体金装喜康力幼儿奶粉</string>
    <string name="sample_seckill_item_title_2">妈咪宝贝均吸干爽纸尿裤XL32片 加大号尿不湿</string>
    <string name="sample_seckill_item_discount_1">1.5</string>
    <string name="sample_seckill_item_discount_2">2</string>
    <string name="sample_seckill_item_price_1">118.00</string>
    <string name="sample_seckill_item_price_2">78.00</string>
    <string name="sample_special_entry_item_countdown_lefttime_1">剩4天</string>
    <string name="sample_special_entry_item_countdown_lefttime_2">剩4天</string>
    <string name="sample_special_entry_item_countdown_lefttime_3">剩4天</string>
    <string name="sample_special_entry_item_countdown_lefttime_4">剩4天</string>
    <string name="sample_special_entry_item_title_1">迪士尼品牌儿童服饰专场</string>
    <string name="sample_special_entry_item_title_2">惠氏儿童奶粉专场</string>
    <string name="sample_special_entry_item_title_3">乐高儿童玩具专场</string>
    <string name="sample_special_entry_item_title_4">迪士尼秋冬潮流新品专场</string>
    <string name="sample_special_entry_item_discount_1">0.4</string>
    <string name="sample_special_entry_item_discount_2">0.2</string>
    <string name="sample_special_entry_item_discount_3">3.5</string>
    <string name="sample_special_entry_item_discount_4">5</string>
    <string name="sample_product_title_1">ora2皓乐齿盛势达Do clear2岁 3岁 6岁-8岁儿童牙膏 日本进口</string>
    <string name="sample_product_price_1">69.90</string>
    <string name="sample_product_left_count_1">仅剩35件</string>
    <string name="sample_product_left_time_1">剩3天03:14:39</string>
    <string name="sample_product_reviews_satisfaction_score_1">4.9</string>
    <string name="sample_product_reviews_account_name_1">165***525@qq.com</string>
    <string name="sample_product_reviews_text_1">味道好闻，宝宝喜欢，比商场便宜，物流很快，比其它订单要快好多！</string>
    <string name="sample_product_reviews_params_1">颜色：粉色    尺码：L</string>
    <string name="sample_product_params_shop_info_1">***正品代理店</string>
    <string name="sample_product_params_brand_1">DO</string>
    <string name="sample_product_params_product_number_1">W956242345</string>
    <string name="sample_product_params_for_ages_1">2岁  3岁  6岁-8岁  儿童</string>
    <string name="sample_product_params_product_place_1">日本</string>
    <string name="sample_product_details_text">2014最后一次疯狂！您准备好了吗？\n为了美丽的您，为了可爱的宝宝赶紧囤货起来！</string>
    <string name="sample_product_stock_num_1">(库存369件)</string>
    <string name="sample_mine_nickname_1">灰姑娘 12123</string>
    <string name="sample_product_size_1">110cm</string>
    <string name="sample_product_size_2">120cm</string>
    <string name="sample_product_size_3">130cm</string>
    <string name="sample_product_size_4">140cm</string>
    <string name="sample_product_color_1">粉红色</string>
    <string name="sample_product_color_2">黑色</string>
    <string name="sample_product_color_3">白色</string>

</resources>
