<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <ImageView 
        android:id="@+id/picture"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/sample_pic1"
        android:contentDescription="@null" />
    
    <LinearLayout
        android:id="@+id/info_rl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        
        <TextView 
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/sample_seckill_item_title_1" />
        
        <LinearLayout
            android:id="@+id/discount_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="@drawable/discount_bg"
            android:orientation="horizontal"
            android:gravity="left|center" >
            
            <TextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sample_seckill_item_discount_1"
                android:textColor="@color/white"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/zhe" />
        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            
            <TextView 
                android:id="@+id/currency_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/gray_text"
                android:text="@string/chinese_currency_symbol" />
            
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/currency_symbol"
                android:layout_toRightOf="@id/currency_symbol"
                android:layout_marginLeft="3dp"
                android:textSize="16sp"
                android:textColor="@color/gray_text"
                android:text="@string/sample_seckill_item_price_1" />
            
            <TextView
                android:id="@+id/brand_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:textSize="12sp"
                android:textColor="#FFF56293"
                android:text="@string/brand_link_hint" />
            
            <TextView
                android:id="@+id/seckill_tv"
                android:layout_width="60dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/seckill_button_bg"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/seckill" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>