<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/tab_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/tab_bg"
            android:gravity="center"
            android:orientation="horizontal" >
            
            <RadioButton
                android:id="@+id/tab_promotion"
                style="@style/main_tab_bottom"
                android:layout_weight="1"
                android:drawableTop="@drawable/bottom_tab_promotion"
                android:checked="true"
                android:text="@string/promotion" />

            <RadioButton
                android:id="@+id/tab_category"
                style="@style/main_tab_bottom"
                android:layout_weight="1"
                android:drawableTop="@drawable/bottom_tab_category"
                android:text="@string/category" />

            <RadioButton
                android:id="@+id/tab_cart"
                style="@style/main_tab_bottom"
                android:layout_weight="1"
                android:drawableTop="@drawable/bottom_tab_cart"
                android:text="@string/cart" />

            <RadioButton
                android:id="@+id/tab_mine"
                style="@style/main_tab_bottom"
                android:layout_weight="1"
                android:drawableTop="@drawable/bottom_tab_mine"
                android:text="@string/mine" />
        </RadioGroup>
    </LinearLayout>

</TabHost>