<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="94dp"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/scrore_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
        
        <com.ec.mamiya.view.SmallStarScoreView
            android:id="@+id/small_star_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="12sp"
            android:textColor="@color/sub_title_light_gray"
            android:text="@string/sample_product_reviews_account_name_1" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrore_ll"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/gray_text"
        android:text="@string/sample_product_reviews_text_1" />
    
    <TextView
        android:id="@+id/params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:textColor="@color/sub_title_light_gray"
        android:text="@string/sample_product_reviews_params_1" />
    
</RelativeLayout>